echoes and director's letter updated

--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
 														<h2>Welcome to IIIT-H!</h2>
 	                            <h2>Welcome to exploring...</h2>
 	                            <h2>Welcome to celebrating...</h2>
-															<h2>Your handbook to the new world!</h2>
+															<!-- <h2>Your handbook to the new world!</h2> -->
 	                            <h2>Welcome to engineering...</h2>
 	                            <h2>Welcome to coding...</h2>
-															<h2>From a sheep to a lion!</h2>
 	                            <h2>Welcome to research...</h2>
 	                            <h2>Welcome to living...</h2>
 	                        </div>
