--- a/schedule.html
+++ b/schedule.html
@@ -12,552 +12,77 @@
 </head>
 
 <body>
-
 	<div class="cd-fold-content single-page">
-		<em>OOPS!</em><br>
-		<p>Induction Schedule will be out very soon!</p>
-
-		<!-- <h2>Induction Schedule</h2>
+		<h2>Induction Schedule</h2>
 		<p>Note - The Schedule is tentative in nature and subject to change.</p>
-		<em>Friday, 28th July 2017</em><br>
+		<em>Friday, 27th July 2017</em><br>
 		<table class="table ind">
 			<tr>
-				<td>Registration</td>
-				<td>9:00 AM - 2:00 PM <br> Nilgiri</td>
+				<td>PG Registrations</td>
+				<td>9:00 AM - 2:00 PM <br> 105, Himalaya</td>
 				<td></td>
 			</tr>
 			<tr>
-				<td>Orientation</td>
-				<td>3:30 PM <br> Himalaya 105 & 205</td>
+				<td>Welcome session</td>
+				<td>4:00 PM – 5:30 PM <br> Amphi Theatre</td>
+				<td>Welcome note by the Faculty and the Students.</td>
+			</tr>
+		</table>
+		<em>Friday, 28th July 2017</em><br>
+		<table class="table ind">
+			<tr>
+				<td>UG Registrations</td>
+				<td>9:00 AM - 2:00 PM <br> 105, Himalaya</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Welcome session</td>
+				<td>4:00 PM – 5:30 PM <br> Amphi Theatre</td>
 				<td>Welcome note by the Faculty and the Students.</td>
 			</tr>
 			<tr>
 				<td>Campus Tour and Meeting the Mentors</td>
-				<td>5:30 PM - 6:30 PM <br> From the Basketball Court</td>
+				<td>5:30 PM - 6:30 PM <br> Gathering Outside Himalaya</td>
 				<td>Getting familiar with the campus via your mentors.</td>
 			</tr>
 
 		</table>
 		<em>Saturday, 29th July 2017</em><br>
 		<table class="table ind">
-
 			<tr>
-				<td>English Diagnostic test</td>
-				<td>Group 3 and 4<br>Between 9:30 AM - 11:00 AM at Nilgiri 104, 119<br><br>
-					Group 1 and 2<br>Between 11:30 AM - 1:00 PM at Nilgiri 104, 119</td>
-				<td>Mandatory Test for all UG1.</td>
+				<td>Reporting time for English Test</td>
+				<td>9:00 AM<br> Himalaya 205</td>
+				<td>Mandatory Test for all UG1</td>
 			</tr>
 			<tr>
-				<td>Aspiration Survey</td>
-				<td>Group 3 and 4<br>Between 11:30 AM - 1:00 PM at Nilgiri TL1, TL2<br><br>
-					Group 1 and 2<br>Between 9:30 AM -11:00 AM at Nilgiri TL1, TL2</td>
-				<td>Mandatory Test for all UG1.</td>
+				<td>Briefing of new students</td>
+				<td>9:15 AM -9:30 AM<br> Himalaya 205</td>
+				<td>Briefing of new students by Dr. Aniket</td>
+			</tr>
+			<tr>
+				<td>English Diagnostic test for all UG1 students except SPEC</td>
+				<td>9:15 AM -9:30 AM<br> Himalaya 205</td>
+				<td></td>
 			</tr>
 			<tr>
 				<td>Parent's Meet with Faculty</td>
-				<td>10:00 AM - 1:00 PM <br> Himalaya 105</td>
+				<td>9:00 AM -12:00 Noon <br> Himalaya 105</td>
 				<td></td>
 			</tr>
 			<tr>
+				<td>Dual Degree Orientation</td>
+				<td>1:00 PM - 3:00 PM <br> Himalaya 205 </td>
 				<td>Discussion with Dual Degree Students and Parents</td>
-				<td>2:00 PM - 3:00 PM <br> Himalaya 105 </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>Parents’ Meeting with Super Seniors</td>
-				<td>3:15 PM - 4:15 PM <br> Himalaya 105 </td>
-				<td>An interactive session with IIIT-H Alumni and Parents.</td>
-			</tr>
-			<tr>
-				<td>Counselling Session for Students</td>
-				<td>3:15 PM - 4:15 PM <br> Himalaya 205 </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>Parents' Meeting with the College Counselling Body</td>
-				<td>4:30 PM - 5:30 PM <br> Himalaya 105</td>
-				<td></td>
 			</tr>
 
 		</table>
 
-		<p>** Groups distribution is given below:<br>
-			Group 1 : Roll No.s From 20171001 to 20171065<br>
-			Group 2 : Roll No.s From 20171066 to 20171130<br>
-			Group 3 : Roll No.s From 20171131 to 20171196<br>
-			Group 4 : Roll No.s From 20171197 to 20171260<br>
-		</p>
-		<em>Monday, 31st July 2017</em><br>
+		<em>Monday, 30th July to Saturday, 11th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Trees on Campus and Tree planting</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM </td>
-			</tr>
-			<tr>
-				<tr>
-				<td>Meeting with Apex Body(followed by cluster meeting)</td>
-				<td>6:30 PM - 10:00 PM <br> TBD </td>
-				<td>First meeting with the Apex Body.</td>
-			</tr>
-			</tr>
-
-		</table>
-
-		<em>Tuesday, 1st August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Personal Success and Social Commitment.. (Panel)</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>What are our Roots? (panel)</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>What are our Roots? (panel)</td>
-				<td>4:00 PM - 6:00 PM </td>
-
-			</tr>
-			<tr>
-				<tr>
-				<td>Cluster meeting</td>
-				<td>6:30 PM - 10:00 PM <br> TBD </td>
-				<td>Ask, share, question, play, learn, teach, enjoy.</td>
-			</tr>
+				<td>Details will be given during the admission</td>
 			</tr>
 		</table>
-	<em>Wednesday, 2nd August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Transitioning from School to College/ Time Management (Kamal Karlapalem)</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV </td>
-				<td>4:00 PM - 6:00 PM </td>
-			</tr>
-			<tr>
-				<tr>
-				<td>Intro to felicity</td>
-				<td>6:30 PM - 10:00 PM </td>
-				<td>Know everything about the techno-cultural fest "FELICITY".</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Thursday, 3rd August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Open Source Workshop</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>Farms and Animals – Kiran Vissa</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>SACB meeting</td>
-				<td>4:00 PM - 05:30 PM</td>
-				<td>First meet of students with Students Academic and Counselling Body.</td>
-			</tr>
-			<tr>
-				<td>Meeting with CCC</td>
-				<td>05:30 PM - 06:00 PM</td>
-				<td>Meet with Campus Canine-Management Cell</td>
-			</tr>
-			<tr>
-				<tr>
-				<td>Intro to clubs</td>
-				<td>6:30 PM - 10:00 PM </td>
-				<td>Come out of your closet. Dare to dream big!</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Friday, 4th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Open Source Workshop / Knowledge Commons/ Creative Commons</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td> Cleanliness drive followed by Cluster Meeting </td>
-				<td>6:30 PM - 10:00 PM</td>
-
-			</tr>
-		</table>
-		<em>Saturday, 5th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>FIELD VISIT (NGOs/farm etc)</td>
-				<td>11:00 AM - 10:00 PM </td>
-			</tr>
-
-		</table>
-		<em>Sunday, 6th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>Orientation Trip!</td>
-				<td>Full Day</td>
-				<td>Trip around Hyderabad city!</td>
-			</tr>
-		</table>
-		<em>Monday, 7th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Theory of Knowledge (Harjinder Singh - Laltu)</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Recycle and donation drive</td>
-				<td>6:30 PM - 10:00 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Tuesday, 8th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Privacy, Intellectual Property and Innovation (Panel)</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>Public Health – Veena Shatrughna</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Sports Activities</td>
-				<td>4:00 PM - 6:00 PM</td>
-				<td>A sporting extravaganza.</td>
-
-
-			</tr>
-			<tr>
-				<td> Talent hunt + cluster meeting</td>
-				<td>6:30 PM - 10:00 PM</td>
-				<td>Showcase your Talents in Front of the Batch!</td>
-
-
-			</tr>
-			</tr>
-		</table>
-		<em>Wednesday, 9th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Theory of Knowledge</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>House meeting</td>
-				<td>6:30 PM - 10:00 PM</td>
-				<td>Agni, Prithvi, Vayu, Aakash! Bring out your talent!</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Thursday, 10th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Theory of Knowledge</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>Our Cities – Anant Maringanti</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Free SLOT</td>
-				<td>4:00 PM - 6:00 PM</td>
-				<td>YAY!</td>
-
-			</tr>
-			<tr>
-				<td>Meeting with apex</td>
-				<td>6:30 PM - 10:00 PM</td>
-				<td>Second meeting with apex body</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Friday, 11th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Gender Workshop – Tejaswini M</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Why do we need Freedom of Thought and Expression? - Panel </td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Ice breaker</td>
-				<td>6:30 PM - 10:00 PM</td>
-				<td>An inter-batch activity that serves as a platform for interacting with students across various batches.</td>
-			</tr>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Saturday, 12th August 2017 & Sunday, 13th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>UG1 Carnival!</td>
-				<td>Full Day</td>
-				<td>A 2 Day Fest comprising Musical, literary, dance, quizzing, arts and many more events. Gear up!</td>
-			</tr>
-		</table>
-		<em>Monday, 14th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Gender Workshop – Tejaswini M</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Freshers practice 1</td>
-				<td>6:30 PM - 10:00 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Tuesday, 15th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>Campus-wide Independence Day Celebrations</td>
-				<td>Early Morning! <br>Amphitheatre</td>
-				<td>Vande Matram!</td>
-			</tr>
-		</table>
-		<em>Wednesday, 16th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Academic Intregity, Professionalism, Plagiarism – Jayanthi Sivaswamy</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>5:00 PM - 6:00 PM</td>
-				<td>Meeting with the Faculty</td>
-			</tr>
-			<tr>
-				<td>Freshers practice 1</td>
-				<td>6:30 PM - 10:00 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Thursday, 17th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Learn Telugu </td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>Farms and Animals – Kavita Kuruganti</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Role of Army in a Democracy -</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Freshers practice</td>
-				<td>6:30 PM - 10:00 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-	<em>Friday, 18th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>IIIT-H Information and Systems – Pradeep Ramancharla</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>PROGRAMMING</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>DLP</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Freshers practise </td>
-				<td>8:00 PM - 10:00 PM <br>Basketball Court</td>
-
-			</tr>
-			</tr>
-		</table>
-	<em>Saturday, 19th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>First Aid, Fire Drill, Life in hostel  – Shatrunjay Rawat, Prabhakar Bhimalapuram</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>DLP</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>PROGRAMMING</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Freshers practice </td>
-				<td>6:30 PM - 10:00 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Sunday, 20th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>Freshers!</td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>Lights, Camera, Action!</td>
-			</tr>
-		</table> -->
-
-
 
 	</div>
 </body>
