--- a/schedule.html
+++ b/schedule.html
@@ -15,74 +15,74 @@
 	<div class="cd-fold-content single-page">
 		<h2>Induction Schedule</h2>
 		<p>Note - The Schedule is tentative in nature and subject to change.</p>
-		<em>Saturday, 29th July 2017</em><br>
+
+		<em>Friday, 27th July 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>Registration</td>
-				<td>9:00 AM - 2:00 PM <br> Nilgiri</td>
+				<td>PG Registrations</td>
+				<td>9:00 AM - 2:00 PM <br> 105, Himalaya</td>
 				<td></td>
 			</tr>
 			<tr>
-				<td>Orientation</td>
-				<td>3:30 PM <br> Amphitheatre, Near Basket Ball Court</td>
+				<td>Welcome session</td>
+				<td>4:00 PM – 5:30 PM <br> Amphi Theatre</td>
+				<td>Welcome note by the Faculty and the Students.</td>
+			</tr>
+			<tr>
+				<td>Campus Tour</td>
+				<td>5:30 PM - 6:30 PM <br> Gathering Outside Himalaya</td>
+				<td>Getting familiar with the campus.</td>
+			</tr>
+		</table>
+		<em>Saturday, 28th July 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>UG Registrations</td>
+				<td>9:00 AM - 2:00 PM <br> 105, Himalaya</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>Welcome session</td>
+				<td>4:00 PM – 5:30 PM <br> Amphi Theatre</td>
 				<td>Welcome note by the Faculty and the Students.</td>
 			</tr>
 			<tr>
 				<td>Campus Tour and Meeting the Mentors</td>
-				<td>5:30 PM - 6:30 PM <br> From the Basketball Court</td>
+				<td>5:30 PM - 6:30 PM <br> Gathering Outside Himalaya</td>
 				<td>Getting familiar with the campus via your mentors.</td>
 			</tr>
 
 		</table>
-		<em>Sunday, 30th July 2017</em><br>
+		<em>Sunday, 29th July 2018</em><br>
 		<table class="table ind">
-
 			<tr>
-				<td>English Diagnostic test</td>
-				<td>Group 3 and 4<br>Between 9:30 AM - 11:00 AM at Nilgiri 104, 119<br><br>
-					Group 1 and 2<br>Between 11:30 AM - 1:00 PM at Nilgiri 104, 119</td>
-				<td>Mandatory Test for all UG1.</td>
+				<td>Reporting time for English Test</td>
+				<td>9:00 AM<br> Himalaya 205</td>
+				<td>Mandatory Test for all UG1</td>
 			</tr>
 			<tr>
-				<td>Aspiration Survey</td>
-				<td>Group 3 and 4<br>Between 11:30 AM - 1:00 PM at Nilgiri TL1, TL2<br><br>
-					Group 1 and 2<br>Between 9:30 AM -11:00 AM at Nilgiri TL1, TL2</td>
-				<td>Mandatory Test for all UG1.</td>
+				<td>Briefing of new students</td>
+				<td>9:15 AM -9:30 AM<br> Himalaya 205</td>
+				<td>Briefing of new students by Dr. Aniket</td>
+			</tr>
+			<tr>
+				<td>English Diagnostic test for all UG1 students except SPEC</td>
+				<td>9:30 AM -11:30 AM<br> Himalaya 205</td>
+				<td></td>
 			</tr>
 			<tr>
 				<td>Parent's Meet with Faculty</td>
-				<td>10:00 AM - 1:00 PM <br> Himalaya 105</td>
+				<td>9:00 AM -12:00 Noon <br> Himalaya 105</td>
 				<td></td>
 			</tr>
 			<tr>
+				<td>Dual Degree Orientation</td>
+				<td>1:00 PM - 3:00 PM <br> Himalaya 205 </td>
 				<td>Discussion with Dual Degree Students and Parents</td>
-				<td>2:00 PM - 3:00 PM <br> Himalaya 105 </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>Parents’ Meeting with Super Seniors</td>
-				<td>3:15 PM - 4:15 PM <br> Himalaya 105 </td>
-				<td>An interactive session with IIIT-H Alumni and Parents.</td>
-			</tr>
-			<tr>
-				<td>Counselling Session for Students</td>
-				<td>3:15 PM - 4:15 PM <br> Himalaya 205 </td>
-				<td></td>
-			</tr>
-			<tr>
-				<td>Parents' Meeting with the College Counselling Body</td>
-				<td>4:30 PM - 5:30 PM <br> Himalaya 105</td>
-				<td></td>
 			</tr>
 
 		</table>
 
-		<p>** Groups distribution is given below:<br>
-			Group 1 : Roll No.s From 20171001 to 20171065<br>
-			Group 2 : Roll No.s From 20171066 to 20171130<br>
-			Group 3 : Roll No.s From 20171131 to 20171196<br>
-			Group 4 : Roll No.s From 20171197 to 20171260<br>
-		</p>
 		<em>Monday, 31th July 2017</em><br>
 		<table class="table ind">
 			<tr>
