Done until 6th August; Needs to start from 7

--- a/schedule.html
+++ b/schedule.html
@@ -83,166 +83,177 @@
 
 		</table>
 
-		<em>Monday, 31th July 2017</em><br>
+		<em>Tuesday, 31th July 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 groups</td>
+			</tr>
+			<tr>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM <br/> 105 & 20 Himalayas </td>			<td>Class in 2 Groups</td>
+			</tr>
+			<tr>
+				<td>Movie: The Kid </td>
+				<td>2:00 PM - 3:30 PM <br/> Bodh-303, Bodh-304 & SH1 (Vindhya Building)</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>WS on Gender/ Language </td>
+				<td>4:00 PM - 6:00 PM <br/> Bodh-105/ Bodh-205</td>
+				<td></td>
+			</tr>
+			<tr>
 
+				<td>Intro to NSS </td>
+				<td> 6:00 PM - 6:30 PM<br/> Bodh-105/205</td>
+				<td></td>
 			</tr>
 			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
+
+				<td>Intro to CCC </td>
+				<td> 6:30 PM - 7:00 PM<br/> Bodh-105/205</td>
+				<td></td>
+			</tr>
+			<tr>X
+				<td>Intro to E-Cell </td>
+				<td> 6:00 PM - 6:30 PM<br/> Bodh-105/205</td>
+				<td></td>
+			</tr>
+			</tr>
+
+		</table>
+
+		<em>Wednesday, 1st August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 groups</td>
 			</tr>
 			<tr>
-				<td>HV</td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Tutorials in 12 Groups</td>			
+			</tr>
+			<tr>
+				<td>Faculty mentor- UG1 student meeting</td>
 				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Tree plantation</td>
-				<td>4:00 PM - 6:00 PM </td>
+				<td>Venue details are given below</td>			
 			</tr>
 			<tr>
 				<tr>
-				<td>Meeting with Apex Body(followed by cluster meeting)</td>
-				<td>6:30 PM - 10:30 PM <br> TBD </td>
-				<td>First meeting with the Apex Body.</td>
+				<td>Talk: Science, Society, Enterprenuership </td>
+				<td>4:00 PM - 6:00 PM <br> Bodh -105</td>
+				<td>Speakers: Ajit Rangnekar, Uzramma</td>
 			</tr>
+				<tr>
+				<td>Spotlight Race - Identify your talents </td>
+				<td>8:00 PM - 10:00 PM <br/> Amphiteatre</td>
+				<td></td>
 			</tr>
-
+			
+			</tr>
 		</table>
-
-		<em>Tuesday, 1st August 2017</em><br>
+		<em>Thursday, 2nd August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 groups</td>
 			</tr>
 			<tr>
-				<td>Open Source Workshop</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM <br/> Bodh-205, Nilgiri-119 </td>
+				<td>Class in 2 Groups</td>				
 			</tr>
 			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Community cooking</td>
-				<td>4:00 PM - 6:00 PM </td>
-				<td>Bonding over cooking for the community.</td>
+				<td>Amma Kanakku (Tamil)</td>
+				<td>2:00 PM - 3:30 PM <br/> Bodh-303, Bodh- 304 & SH1</td>
+				<td>Vindhya Building</td>			
 			</tr>
 			<tr>
 				<tr>
-				<td>Cluster meeting</td>
-				<td>6:30 PM - 10:30 PM <br> TBD </td>
-				<td>Ask, share, question, play, learn, teach, enjoy.</td>
+				<td>WS on Language / Gender</td>
+				<td>4:00 PM - 6:00 PM <br> Bodh -205</td>
+				<td></td>
 			</tr>
+				<tr>
+				<td>Intro to Clubs </td>
+				<td>6:30 PM - 7:30 PM <br/> SH-1</td>
+				<td></td>
+			</tr>
+				<tr>
+				<td>Intro to Felicity </td>
+				<td>8:30 PM - 9:30 PM <br/> SH-1</td>
+				<td></td>
+			</tr>
+			
 			</tr>
 		</table>
-	<em>Wednesday, 2nd August 2017</em><br>
+		<em>Friday, 3rd August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 groups</td>
 			</tr>
 			<tr>
-				<td>Personal Success and Social Commitment (Panel)</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Tutorials in 12 Groups</td>			
 			</tr>
 			<tr>
-				<td>What are our Roots? (Panel)</td>
+				<td>Debate: Gaming/ Social Media</td>
 				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>What are our Roots? (Panel) </td>
-				<td>4:00 PM - 6:00 PM </td>
+				<td>Bodh-303, Bodh-304 & SH1, Vindhya Building</td>			
 			</tr>
 			<tr>
 				<tr>
-				<td>Intro to felicity</td>
-				<td>6:30 PM - 10:30 PM </td>
-				<td>Know everything about the techno-cultural fest "FELICITY".</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Thrusday, 3rd August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
+				<td>Talk: Our City Hyderabad </td>
+				<td>4:00 PM - 6:00 PM <br> Bodh -105</td>
+				<td>Speakers: Anant Maringanti(HUL), Anuradha Reddy(INTACH) Aasher Farhen (LaMakaan) </td>
 			</tr>
 			<tr>
-				<td>Open Source Workshop</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Cluster Meeting </td>
+				<td>6:00 PM - 7:00 PM <br/> Respetive Cluster Venues</td>
+				<td></td>
 			</tr>
-			<tr>
-				<td>Education – Anil Sadgopal</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>SACB meeting</td>
-				<td>4:00 PM - 6:00 PM</td>
-				<td>First meet of students with Students Academic and Counselling Body.</td>
-			</tr>
-			<tr>
 				<tr>
-				<td>Intro to clubs</td>
-				<td>6:30 PM - 10:30 PM </td>
-				<td>Come out of your closet. Dare to dream big!</td>
-
+				<td>Intro to Parliament </td>
+				<td>7:00 PM - 8:00 PM <br/> Bodh- 105/205/SH1</td>
+				<td></td>
 			</tr>
-			</tr>
-		</table>
-		<em>Friday, 4th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Open Source Worksop</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Cleanliness drive</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Meeting with CCC (followed by cluster meeting) </td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>Meet with Campus Canine Cell</td>
-			</tr>
+			
 			</tr>
 		</table>
-		<em>Saturday, 5th August 2017</em><br>
+		<em>Saturday, 4th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
+				<td>Fresher's Carnival (Apex)</td>
+				<td> </td>
+				<td></td>
 			</tr>
-			<tr>
-				<td>FIELD VISIT (NGOs/farm etc)</td>
-				<td>11:00 AM - 10:30 PM </td>
+			
 			</tr>
-
 		</table>
-		<em>Sunday, 6th August 2017</em><br>
+		<em>Sunday, 5th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>Orientation Trip!</td>
-				<td>Full Day</td>
-				<td>Trip around Hyderabad city!</td>
+				<td>Activities on Lakes of Hyderabad along with a visit to Shameerpet Lake</td>
+				<td></td>
+				<td>Coordinated by Dr. Rajan</td>
+			</tr>
+			
+			</tr>
+		</table>
+		<em>Monday, 6th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Bonalu (Fresher's Carnival, Apex)</td>
+			</tr>
+			
 			</tr>
 		</table>
 		<em>Monday, 7th August 2017</em><br>
