induction schedule updated

--- a/schedule.html
+++ b/schedule.html
@@ -83,6 +83,36 @@
 
 		</table>
 
+		<em>Monday, 30th July 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Introduction in H-105</td>
+			</tr>
+			<tr>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Introduction in H-205</td>
+			</tr>
+			<tr>
+				<td>Tree Plantation</td>
+				<td>2:00 PM - 3:30 PM </td>
+				<td>By Anil Vupalla</td>
+			</tr>
+			<tr>
+				<td>Talk on Academic Excellence and IIIT by Director, Deans and Registrar</td>
+				<td>4:00 PM - 6:00 PM </td>
+				<td>H-105</td>
+			</tr>
+			<tr>
+				<td>First Meet with Apex Body</td>
+				<td> 8:00 PM - 9:00 PM</td>
+				<td>At H-105</td>
+			</tr>
+
+		</table>
+
 		<em>Tuesday, 31th July 2018</em><br>
 		<table class="table ind">
 			<tr>
@@ -105,18 +135,16 @@
 				<td></td>
 			</tr>
 			<tr>
-
 				<td>Intro to NSS </td>
 				<td> 6:00 PM - 6:30 PM<br/> Bodh-105/205</td>
 				<td></td>
 			</tr>
 			<tr>
-
 				<td>Intro to CCC </td>
 				<td> 6:30 PM - 7:00 PM<br/> Bodh-105/205</td>
 				<td></td>
 			</tr>
-			<tr>X
+			<tr>
 				<td>Intro to E-Cell </td>
 				<td> 6:00 PM - 6:30 PM<br/> Bodh-105/205</td>
 				<td></td>
@@ -135,12 +163,12 @@
 			<tr>
 				<td>Value Education</td>
 				<td>11:30 AM - 1:00 PM </td>
-				<td>Tutorials in 12 Groups</td>			
+				<td>Tutorials in 12 Groups</td>
 			</tr>
 			<tr>
 				<td>Faculty mentor- UG1 student meeting</td>
 				<td>2:00 PM - 3:30 PM </td>
-				<td>Venue details are given below</td>			
+				<td>Venue details are given below</td>
 			</tr>
 			<tr>
 				<tr>
@@ -153,7 +181,7 @@
 				<td>8:00 PM - 10:00 PM <br/> Amphiteatre</td>
 				<td></td>
 			</tr>
-			
+
 			</tr>
 		</table>
 		<em>Thursday, 2nd August 2018</em><br>
@@ -166,12 +194,12 @@
 			<tr>
 				<td>Value Education</td>
 				<td>11:30 AM - 1:00 PM <br/> Bodh-205, Nilgiri-119 </td>
-				<td>Class in 2 Groups</td>				
+				<td>Class in 2 Groups</td>
 			</tr>
 			<tr>
 				<td>Amma Kanakku (Tamil)</td>
 				<td>2:00 PM - 3:30 PM <br/> Bodh-303, Bodh- 304 & SH1</td>
-				<td>Vindhya Building</td>			
+				<td>Vindhya Building</td>
 			</tr>
 			<tr>
 				<tr>
@@ -189,7 +217,7 @@
 				<td>8:30 PM - 9:30 PM <br/> SH-1</td>
 				<td></td>
 			</tr>
-			
+
 			</tr>
 		</table>
 		<em>Friday, 3rd August 2018</em><br>
@@ -202,12 +230,12 @@
 			<tr>
 				<td>Value Education</td>
 				<td>11:30 AM - 1:00 PM </td>
-				<td>Tutorials in 12 Groups</td>			
+				<td>Tutorials in 12 Groups</td>
 			</tr>
 			<tr>
 				<td>Debate: Gaming/ Social Media</td>
 				<td>2:00 PM - 3:30 PM </td>
-				<td>Bodh-303, Bodh-304 & SH1, Vindhya Building</td>			
+				<td>Bodh-303, Bodh-304 & SH1, Vindhya Building</td>
 			</tr>
 			<tr>
 				<tr>
@@ -225,7 +253,7 @@
 				<td>7:00 PM - 8:00 PM <br/> Bodh- 105/205/SH1</td>
 				<td></td>
 			</tr>
-			
+
 			</tr>
 		</table>
 		<em>Saturday, 4th August 2018</em><br>
@@ -235,7 +263,7 @@
 				<td> </td>
 				<td></td>
 			</tr>
-			
+
 			</tr>
 		</table>
 		<em>Sunday, 5th August 2018</em><br>
@@ -245,7 +273,7 @@
 				<td></td>
 				<td>Coordinated by Dr. Rajan</td>
 			</tr>
-			
+
 			</tr>
 		</table>
 		<em>Monday, 6th August 2018</em><br>
@@ -253,306 +281,163 @@
 			<tr>
 				<td>Bonalu (Fresher's Carnival, Apex)</td>
 			</tr>
-			
+
 			</tr>
 		</table>
-		<em>Monday, 7th August 2017</em><br>
+		<em>Tuesday, 7th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 Groups</td>
+
 
 			</tr>
 			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Class in 2 groups(H-105 and H-205)</td>
+
 			</tr>
 			<tr>
-				<td>HV</td>
+				<td>Importance of News</td>
 				<td>2:00 PM - 3:30 PM </td>
+				<td> Bodh-303,304,SH1, Vindhya Building</td>
 			</tr>
 			<tr>
-				<td>Recycle and donation drive</td>
+				<td>Workshop on Stress/Privelege</td>
 				<td>4:00 PM - 6:00 PM</td>
-
+				<td> Bodh-105,205</td>
 			</tr>
+
 			<tr>
-				<td>Time Capsule </td>
-				<td>6:30 PM - 10:30 PM</td>
+				<td>House Meeting</td>
+				<td> 8:00 PM - 9:00 PM</td>
+				<td></td>
+			</tr>
 
-			</tr>
-			</tr>
 		</table>
-		<em>Tuesday, 8th August 2017</em><br>
+
+		<em>Wednesday, 8th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 Groups</td>
+
 
 			</tr>
 			<tr>
-				<td>Privacy, Intellectual Property and Innovation (Panel)</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Class in 12 groups</td>
+
 			</tr>
 			<tr>
-				<td>HV</td>
+				<td>Faculty mentor-UG1 student meeting</td>
 				<td>2:00 PM - 3:30 PM </td>
+
 			</tr>
 			<tr>
-				<td>HV</td>
+				<td>Talk on how do we define Development</td>
 				<td>4:00 PM - 6:00 PM</td>
-
+				<td>By V.Bhasker, Sudha Bharadwaj, CK Ganguly at H-105</td>
 			</tr>
+
 			<tr>
-				<td> Talent hunt + cluster meeting</td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>Showcase your Talents in Front of the Batch!</td>
-
-			</tr>
+				<td>Sports Event</td>
+				<td> 6:00 PM - 7:00 PM</td>
+				<td>Football/Felicity Ground</td>
 			</tr>
 		</table>
-		<em>Wednesday, 9th August 2017</em><br>
+
+		<em>Thursday, 9th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 Groups</td>
+
 
 			</tr>
 			<tr>
-				<td>Theory of Knowledge</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Class in 2 groups(H-205, Nilgiri-119)</td>
+
 			</tr>
 			<tr>
-				<td>Public Health – Veena Shatrughna</td>
+				<td>Group Skits</td>
 				<td>2:00 PM - 3:30 PM </td>
+				<td>H-304,CR1,SH1</td>
 			</tr>
 			<tr>
-				<td>Sports Activities</td>
+				<td>Workshop on Privilege/Stress</td>
 				<td>4:00 PM - 6:00 PM</td>
-				<td>A sporting extravaganza.</td>
+				<td>Nilgiri 119/H-205</td>
 			</tr>
 			<tr>
-				<td>House meeting</td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>Agni, Prithvi, Vayu, Aakash! Bring out your talent!</td>
+				<td>Cluster Meeting</td>
+				<td> 6:00 PM - 7:00 PM</td>
+				<td>Respective Cluster Venues</td>
+			</tr>
 
-			</tr>
-			</tr>
 		</table>
-		<em>Thursday, 10th August 2017</em><br>
+
+		<em>Friday, 10th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
+				<td>Arts</td>
+				<td>9:00 AM - 11:00 AM </td>
+				<td>Class in 5 Groups</td>
+
 
 			</tr>
 			<tr>
-				<td>Theory of Knowledge</td>
-				<td>11:00 AM - 1:00 PM </td>
+				<td>Value Education</td>
+				<td>11:30 AM - 1:00 PM </td>
+				<td>Tutorials in 12 groups</td>
+
 			</tr>
 			<tr>
-				<td>Our Cities – Anant Maringanti</td>
+				<td>Group Skits</td>
 				<td>2:00 PM - 3:30 PM </td>
+				<td>H-303,H-304,SH1</td>
 			</tr>
 			<tr>
-				<td>Freedom of Thought and Expression</td>
+				<td>Talk on Personal Success and Society by Shikha Go</td>
 				<td>4:00 PM - 6:00 PM</td>
-
+				<td>H-105</td>
 			</tr>
+
 			<tr>
-				<td>Meeting with apex</td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>Second meeting with apex body</td>
-
-			</tr>
+				<td>Meeting with Apex Body</td>
+				<td> 6:00 PM - 7:00 PM</td>
+				<td>H-105/205</td>
 			</tr>
 		</table>
-		<em>Friday, 11th August 2017</em><br>
+
+
+
+		<em>Saturday, 11th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
+				<td>Classical Music/Dance</td>
+				<td>10:00 AM - 5:00 PM  with breaks</td>
+				<td>By Mr.Jayachandram, Ms.Purva, Mr.Vasu, Mr.Gayatri Prasad, Dr.Vinoo at H-105 </td>
 
 			</tr>
 			<tr>
-				<td>Theory of Knowledge</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Ice breaker 1</td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>An inter-batch activity that serves as a platform for interacting with students across various batches.</td>
-			</tr>
-
-			</tr>
+				<td>Face Off!</td>
+				<td> 8:00 PM - 9:30 PM</td>
+				<td>Ae dekha zara, kisme kitna hai dum...! Challenge your seniors for fun ativities and interact with them.</td>
 			</tr>
 		</table>
-		<em>Saturday, 12th August 2017 & Sunday, 13th August 2017</em><br>
+
+		<em>Sunday, 12th August 2018</em><br>
 		<table class="table ind">
 			<tr>
-				<td>UG1 Carnival!</td>
-				<td>Full Day</td>
-				<td>A 2 Day Fest comprising Musical, literary, dance, quizzing, arts and many more events. Gear up!</td>
-			</tr>
-		</table>
-		<em>Monday, 14th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Freshers practice 1</td>
-				<td>6:30 PM - 10:30 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Tuesday, 15th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>Campus-wide Independence Day Celebrations</td>
-				<td>Early Morning! <br>Amphitheatre</td>
-				<td>Vande Matram!</td>
-			</tr>
-		</table>
-		<em>Wednesday, 16th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>HV</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>FSIS</td>
-				<td>5:00 PM - 6:00 PM</td>
-				<td>Meeting with the Faculty</td>
-			</tr>
-			<tr>
-				<td>Freshers practice 1</td>
-				<td>6:30 PM - 10:30 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Thrusday, 17th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>Farms and Animals – Kavita Kuruganti</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>Role of Army in a Democracy -</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Cluster meeting + Freshers practice</td>
-				<td>6:30 PM - 10:30 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-	<em>Friday, 18th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>PROGRAMMING</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>DLP</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Informals(Ice breaker 2)</td>
-				<td>8:00 PM - 9:30 PM <br>Basketball Court</td>
-				<td>No description needed for this one.</td>
-			</tr>
-			</tr>
-		</table>
-	<em>Saturday, 19th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>HSS</td>
-				<td>8:30 AM - 10:30 AM </td>
-
-			</tr>
-			<tr>
-				<td>Creative ACTIVITY</td>
-				<td>11:00 AM - 1:00 PM </td>
-			</tr>
-			<tr>
-				<td>DLP</td>
-				<td>2:00 PM - 3:30 PM </td>
-			</tr>
-			<tr>
-				<td>PROGRAMMING</td>
-				<td>4:00 PM - 6:00 PM</td>
-
-			</tr>
-			<tr>
-				<td>Freshers practice </td>
-				<td>6:30 PM - 10:30 PM</td>
-
-			</tr>
-			</tr>
-		</table>
-		<em>Sunday, 20th August 2017</em><br>
-		<table class="table ind">
-			<tr>
-				<td>Freshers!</td>
-				<td>6:30 PM - 10:30 PM</td>
-				<td>Lights, Camera, Action!</td>
+				<td>Orientation Trip</td>
 			</tr>
 		</table>
 
