minor changes updated

--- a/schedule.html
+++ b/schedule.html
@@ -245,7 +245,7 @@
 			</tr>
 			<tr>
 				<td>Cluster Meeting </td>
-				<td>6:00 PM - 7:00 PM <br/> Respetive Cluster Venues</td>
+				<td>6:00 PM - 7:00 PM <br/> Respective Cluster Venues</td>
 				<td></td>
 			</tr>
 				<tr>
