--- a/schedule.html
+++ b/schedule.html
@@ -434,13 +434,53 @@
 			</tr>
 		</table>
 
-		<em>Sunday, 12th August 2018</em><br>
+		<em>Monday, 13th August 2018</em><br>
 		<table class="table ind">
 			<tr>
 				<td>Orientation Trip</td>
 			</tr>
 		</table>
 
+		<em>Tuesday, 14th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Freshers Practice</td>
+				<td>6:00 PM - 8:30 PM</td>
+			</tr>
+		</table
+
+		<em>Wednesday, 15th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Freshers Practice</td>
+				<td>6:00 PM - 8:30 PM</td>
+			</tr>
+		</table>
+
+		<em>Thursday, 16th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Freshers Practice</td>
+				<td>6:00 PM - 8:30 PM</td>
+			</tr>
+		</table>
+
+		<em>Friday, 17th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Freshers Practice</td>
+				<td>6:00 PM - 8:30 PM</td>
+			</tr>
+		</table>
+
+		<em>Saturday, 18th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Freshers Night</td>
+				<td>7:30 PM - 10:00 PM</td>
+				<td>Amphi Theatre</td>
+			</tr>
+		</table>
 
 
 	</div>
