minor changes updated

--- a/schedule.html
+++ b/schedule.html
@@ -434,12 +434,20 @@
 			</tr>
 		</table>
 
-		<em>Monday, 13th August 2018</em><br>
+		<em>Sunday, 12th August 2018</em><br>
 		<table class="table ind">
 			<tr>
 				<td>Orientation Trip</td>
 			</tr>
 		</table>
+
+		<em>Monday, 13th August 2018</em><br>
+		<table class="table ind">
+			<tr>
+				<td>Freshers Practice</td>
+				<td>6:00 PM - 8:30 PM</td>
+			</tr>
+		</table
 
 		<em>Tuesday, 14th August 2018</em><br>
 		<table class="table ind">
